--- a/NetCoreApp.csproj
+++ b/NetCoreApp.csproj
@@ -8,6 +8,21 @@
   <ItemGroup>
     
     
+    <PackageReference Include="bootstrap" Version="4.5.0" />
+    
+    
+    <PackageReference Include="Font.Awesome" Version="5.13.0" />
+    
+    
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    
+    
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
+    
+    
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     
     
